--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ PORT=3001
 # AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
+AWS_REGION=
 AWS_S3_BUCKET_NAME=
+AWS_S3_URLS_EXPIRATION_TIME=86400
