--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,9 @@
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "import/prefer-default-export": "off",
     "lines-between-class-members": "off",
-    "@typescript-eslint/lines-between-class-members": ["off"]
+    "@typescript-eslint/lines-between-class-members": ["off"],
+    "@typescript-eslint/no-use-before-define": ["error", { "typedefs": false }],
+    "@typescript-eslint/no-explicit-any": "error",
+    "no-console": "warn"
   }
 }
