Add FILE_PART_SIZE env

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_S3_BUCKET_NAME=
 AWS_S3_URLS_EXPIRATION_TIME=86400
+
+# INTERNAL CONFIG
+FILE_PART_SIZE=5242880
