Update launch debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
     {
       "type": "node",
       "restart": true,
-      "name": "Launch & Debug",
+      "name": "Attach Debugger",
       "skipFiles": [
         "<node_internals>/**"
       ],
