--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "stream-mock": "^2.0.5",
+    "swagger-autogen": "^2.11.2",
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
