Add swagger-autogen and config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "asynciterable",
+        "Autogen",
         "respawn",
+        "tscpaths",
         "typedefs"
     ]
 }
