--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "if-env": "^1.0.4",
     "pino": "^6.13.0",
     "pino-pretty": "^6.0.0",
+    "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
@@ -38,6 +39,7 @@
     "@types/node": "^16.6.1",
     "@types/pino": "^6.3.11",
     "@types/stream-mock": "^2.0.1",
+    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
